syntax = "proto3";

package course;

service CourseService { 
    rpc create(CreateCourseDto) returns(Course){};
    rpc getAll(Pagination) returns(Courses){};
    rpc getOne(OneDto) returns(Course){};
    rpc update(UpdateCourseDto) returns(Course){};
    rpc delete(OneDto) returns(DeleteMessage){};
}
message CreateCourseDto{
    string title = 1;
    string description = 2;
}
message Course{
    int32 id = 1;
    string title = 2;
    string description = 3;
}
message Pagination{
    string page = 1;
    string limit = 2;
}
message Courses{
    repeated Course courses = 1;
}
message OneDto{
    int32 id = 1;
}
message UpdateCourseDto{
    int32 id = 1;
    string title = 2;
    string description = 3;
}
message DeleteMessage {
    string message = 1;
}